k8s/deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kurumsal-indirim-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kurumsal-indirim-backend
  template:
    metadata:
      labels:
        app: kurumsal-indirim-backend
    spec:
      containers:
      - name: backend
        image: kurumsal-indirim-backend:latest
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kurumsal-indirim-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kurumsal-indirim-frontend
  template:
    metadata:
      labels:
        app: kurumsal-indirim-frontend
    spec:
      containers:
      - name: frontend
        image: kurumsal-indirim-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    app: kurumsal-indirim-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: kurumsal-indirim-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
