k8s/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurumsal-indirim-ingress-dev
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev.kurumsalindirim.mfa.gov.tr
    - api-dev.kurumsalindirim.mfa.gov.tr
    - keycloak-dev.kurumsalindirim.mfa.gov.tr
    secretName: kurumsalindirim-dev-tls
  rules:
  - host: dev.kurumsalindirim.mfa.gov.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api-dev.kurumsalindirim.mfa.gov.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: keycloak-dev.kurumsalindirim.mfa.gov.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
