k8s/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kurumsal-indirim-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - kurumsalindirim.mfa.gov.tr
    - api.kurumsalindirim.mfa.gov.tr
    - keycloak.kurumsalindirim.mfa.gov.tr
    secretName: kurumsalindirim-tls
  rules:
  - host: kurumsalindirim.mfa.gov.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api.kurumsalindirim.mfa.gov.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: keycloak.kurumsalindirim.mfa.gov.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
